Fix wrapping of "-N/A-" done at time

--- a/app/assets/stylesheets/_mixins.css.scss
+++ b/app/assets/stylesheets/_mixins.css.scss
@@ -275,6 +275,7 @@
       padding:6px;
       span {
         display:block;
+        white-space:nowrap;
       }
       span:not(.time) {
         display:block;
